--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     flex-direction: column;
-    background-color: #9DC08B;
+    background-color: #2B3467;
 
 }
 .prezentare{
@@ -9,6 +9,7 @@ body{
     display: flex;
     flex-direction: column;
     font-family: 'Cormorant Garamond', serif;
+    color: #E8F9FD;
     
 }
 a{
@@ -24,7 +25,7 @@ i{
     
 }
 p{
-    color: #990000;
+    
     font-size: 25px;
     margin:0cm;
     padding: 1cm;
