--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body{
 .stanga{
     display: flex;
     flex-direction: column;
-    background-color: #EDF285;
+    background-color: #BAD7E9;
     align-items: center;
     padding-top: 0.5cm;
     align-items: center;
